--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <body>
-    <h1>Gavin's webpage</p>
-    <p>My content goes here -- version 1</p>
+    <h1>Gavin's webpage</h1>
+    <p>My content goes here -- version 2❓</p>
   </body>
 </html>
